--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,10 @@
 body {
     margin: auto 20px;
 }
+
+header {
+    margin: 0 -20px;
+}
 .swiper {
     width: 80%;
     height: 100%;
@@ -38,10 +42,12 @@ body {
 h1{
     font-family: sans-serif;
     font-weight: bold;
+    color: #127de7;
 }
 
 p{
     font-family: 'Roboto', Arial, Helvetica, serif;
+    color:#5a5a5a;
 }
 
 article{
